[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Raphael Krupinski <rafalkrupinski@users.noreply.github.com>"]
description = "Python async OpenAPI client library generator"
license = "AGPL-3.0"
name = "lapidary-render"
version = "0.7.3"
packages = [{ include = "lapidary", from = "src" }]
readme = 'Readme.md'
repository = 'https://github.com/python-lapidary/lapidary'
include = [{ path = 'src/lapidary/render/templates' }]


[tool.poetry.dependencies]
python = "^3.9"
black = "^22.8.0"
inflection = "^0.5.1"
Jinja2 = "^3.1.2"
jsonpatch = "^1.32"
lapidary = "0.7.3"
pydantic = "^1.10.2"
python-mimeparse = "^1.6.0"
PyYAML = "^6.0"
tomlkit = "^0.11.4"
typer = "^0.6.1"

[tool.poetry.scripts]
lapidary = "lapidary.render:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

