[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Raphael Krupinski <rafalkrupinski@users.noreply.github.com>"]
description = "Python API client generator"
name = "lapis"
version = "0.1.0"
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
