[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Raphael Krupinski <rafalkrupinski@users.noreply.github.com>"]
description = "Python API client generator"
license = "AGPL-3.0"
name = "lapis-gen"
version = "0.3.0"
packages = [{ include = "lapis", from = "src" }]
readme = 'Readme.md'
repository = 'https://github.com/lapis-project/lapis'


[tool.poetry.dependencies]
python = "^3.9"
black = "^22.8.0"
inflection = "^0.5.1"
Jinja2 = "^3.1.2"
jsonpatch = "^1.32"
lapis-client-base = "^0.2.2"
pydantic = { extras = ["email"], version = "^1.9.2" }
python-mimeparse = "^1.6.0"
PyYAML = "^6.0"
tomlkit = "^0.11.4"
typer = "^0.6.1"

[tool.poetry.scripts]
lapis = "lapis.__main__:start"
