[tool.poetry]
name = "lapidary"
version = "0.7.2"
description = "Python async OpenAPI client library"
authors = ["Raphael Krupinski <rafalkrupinski@users.noreply.github.com>"]
license = "MIT"
readme = "Readme.md"
packages = [{ include = "lapidary", from = "src" }]
repository = "https://github.com/python-lapidary/lapidary"


[tool.poetry.dependencies]
python = "^3.9"
httpx = { extras = ["http2"], version = "^0.23.0" }
inflection = "^0.5.1"
platformdirs = "^2.6.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-mimeparse = "^1.6.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]
